# V-CORE

./: .gitignore  .mcp.json  AGENT.md  AGENTS.md  CLAUDE.md  DONE.md  LaunchPixelStreaming2Cloud.bat  LaunchPixelStreaming2Standalone.bat  LaunchVCORE.bat  PLAN.md  README.md  VCORE.sln  VCORE.uproject  package.bat  start-router.ps1
web/services/chatbot-backend/: Dockerfile  pyproject.toml
web/services/chatbot-backend/app/: main.py
web/services/chatbot-backend/pai_chatbot_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
web/services/chatbot-backend/scripts/: benchmark_llm_providers.py  benchmark_v2.py  eval_rag_retrieval.py  export_ontology_graph.py  generate_v2_cases.py  phase25_diagnostic.py
web/services/chatbot-backend/tests/: conftest.py  test_agent_plan.py  test_agv_optimization.py  test_agv_optimization_reports.py  test_benchmark_v2.py  test_chat_api.py  test_control_client.py  test_llm_benchmark.py  test_llm_gateway.py  test_rag_eval.py  test_rag_retrieval.py  test_robot_orchestrator.py  test_safety_observability.py  test_scenario_verification.py  test_sim_intent_routing.py  test_station_scenario.py  test_ue5_client.py
web/services/control-server-demo/: Dockerfile  pyproject.toml  requirements.txt
web/services/control-server-demo/app/: domain.py  main.py  repository.py  schemas.py
web/services/control-server-demo/tests/: test_control_api.py
web/services/iot-platform-demo/: Dockerfile  pyproject.toml
web/services/iot-platform-demo/app/: domain.py  main.py  repository.py  schemas.py
web/services/iot-platform-demo/tests/: test_iot_api.py
(+347 files in other folders)
