[project]
name = "pai-chatbot-backend"
version = "0.1.0"
description = "Virtual Process digital-twin chatbot backend for the UE5 AGV cell."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "httpx>=0.27.0",
  "langgraph>=1.0.0",
  "pytest>=8.3.0",
  "eval-type-backport>=0.2.2",
  "psycopg[binary]>=3.2.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
