[project]
name = "pai-control-server-demo"
version = "0.1.0"
description = "Demo control server (station registry) for Virtual Process chatbot integration."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "httpx>=0.27.0",
  "pytest>=8.3.0",
  "eval-type-backport>=0.2.2"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
